# catch_bottle

UR5e_robotiq_moveit_config/config/: UR5e_robotiq.srdf  controllers.yaml  ompl_planning.yaml
catch_control/: CMakeLists.txt  catch_bottle.launch  joined_UR5e_gripper.launch  mymoveit_node.launch  package.xml
catch_control/Matlab/: load_data.m
catch_control/config/: bottle.yaml  catch_bottle.rviz  moveit.rviz
catch_control/record_servoj_sim/: 1_servoj_tracking.txt  1_servoj_tracking_real_robot.txt
catch_control/src/: catch_bottle.cpp  catch_bottle.h  joint_state_maintain.h  mymoveit.cpp  mymoveit.h  plan.cpp
robotiq_85_gripper-master/robotiq_85_bringup/launch/: robotiq_85.launch
ur_modern_driver/launch/: ur5_bringup.launch  ur5e_bringup.launch  ur5e_ros_control.launch
ur_modern_driver/src/ros/: controller.cpp
